@@ -1,5 +1,10 @@
 2009-01-29  Mark Mitchell  <mark@codesourcery.com>
 
+	* gas/arm/thumb32.s (qadd): Add tests for them.
+	* gas/arm/thumb32.d: Adjust accordingly.
+
+2009-01-29  Mark Mitchell  <mark@codesourcery.com>
+
 	* gas/arm/thumb32.s (qadd): Add qadd, qdadd, qsub, and qdsub.
 	* gas/arm/thumb32.d: Likewise.
 
